# fastapi-starter

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: error-handleling-rules.mdc  fastapi-application-rules.mdc  fastapi-route-rules.mdc  python-general-principles.mdc  python-uv.mdc
alembic/versions/: 2025_12_23_1658-f7c451be0154_init_user_table.py
app/: main.py
app/api/handlers/: api.py  general.py
app/api/middlewares/: logging.py  request_id.py
app/api/routes/auth/: service.py
app/api/routes/user/: deps.py  models.py  service.py
app/api/schemas/: error.py  response.py
app/core/: config.py  db.py  logger.py
app/core/handlers/: api.py  general.py
app/core/middlewares/: logging.py
app/core/schemas/: __init__.py  api.py
app/modules/health/: router.py
openspec/: project.md
openspec/changes/archive/2025-12-24-add-integration-tests/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-12-24-add-integration-tests/specs/integration-tests/: spec.md
openspec/specs/integration-tests/: spec.md
scripts/: commands.py
server/: main.py
server/.cursor/rules/: database-interaction-rules.mdc  fastapi-application-rules.mdc  fastapi-route-rules.mdc
server/core/: config.py  logger.py
server/core/decorators/: response_wrapper.py
server/core/handlers/: api.py  general.py
server/core/middlewares/: logging.py
server/modules/health/: router.py
server/routers/: items.py
server/schemas/: item.py
